Horizontal scroll fix 14

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     width: 100%;
     padding: 1rem;
     font-family: 'Open Sans', sans-serif;
+    overflow: hidden;
+
 }
 
 header {
